{
    "name": "Inputs",
    "maps": [
        {
            "name": "Player",
            "id": "ce36fc6e-a425-42ab-a2f5-2cc8a53e76ca",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "fca9b7a1-c469-4acb-b04d-be9e3404637d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenShop",
                    "type": "Button",
                    "id": "b7dfbe0d-a987-4ada-9731-cbec145f1b6e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSlot1",
                    "type": "Button",
                    "id": "60faad5f-c712-4e8d-ba78-696c9a42c37d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSlot2",
                    "type": "Button",
                    "id": "f7567516-82f2-42db-834c-bf8ee6c582a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseSlot3",
                    "type": "Button",
                    "id": "206b001f-f52d-47df-9d08-1147ca2481f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b04e91fc-988d-4f01-af23-fdd29c3ce95f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b0db9ff-f998-4cb6-8691-f9dedd74ea71",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "OpenShop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2e26196-b1b6-4d8d-951d-bf3d90b93328",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "UseSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1001e1fd-9762-40f3-86b8-dbbf347c8837",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "UseSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed1b65c8-a8e9-4b3a-b3dc-add34fb2cc18",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "UseSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Standart",
            "bindingGroup": "Standart",
            "devices": []
        }
    ]
}